# flutter_concrete

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: precompile.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
docs/superpowers/plans/: 2026-03-18-dynamic-topology-and-bitwidth.md
docs/superpowers/specs/: 2026-03-18-dynamic-topology-and-bitwidth-design.md
ios/: flutter_concrete.podspec
ios/Classes/: flutter_concrete.c
lib/: flutter_concrete.dart
lib/src/: circuit_encoding.dart  client_zip_parser.dart  concrete_cipher_info.dart  concrete_client.dart  fhe_native.dart  key_storage.dart  key_topology.dart  quantizer.dart
rust/: Cargo.toml  build.rs  cargokit.yaml
rust/schema/: concrete-protocol.capnp
rust/src/: lib.rs
test/: circuit_encoding_test.dart  client_zip_parser_test.dart  concrete_client_test.dart  integration_test.dart  key_topology_test.dart  quantizer_test.dart
